mostly finished header and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<%= render 'layouts/header' %>
+
 <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
 <% end %>
@@ -16,6 +18,8 @@
 <% end %>
 
 <%= yield %>
+
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
