updated the header and footer to look a little nicer

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2227,16 +2227,16 @@ header[role="banner"] {
   color:inherit;
   width:100%;
   position:relative;
-  background:url(//d3krjgdh5n3zsi.cloudfront.net/assets/bg-header-e252e265ae998fba326262ba77c36eb7.jpg);
+  background:url(http://1.bp.blogspot.com/-y6CYmtafumU/UtkWSWZ0aCI/AAAAAAAABUM/iELJPF8Oc8o/s1600/2013-09-Red-Simple-Background-Wallpaper.png);
   background-size:cover;
   background-position:bottom right;
-  min-height:19rem;
+  min-height:5rem;
 }
 
 header[role="banner"] .container {
   position:relative;
   z-index:1;
-  padding-top:2rem;
+  padding-top:1rem;
 }
 
 header[role="banner"] .brand {
