--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,14 @@
 <footer role="contentinfo">
-
   <nav class="footer-primary">
     <div class="container">
       <div class="brand">
         <a class="logo selected" href="/"><img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png"></a>
         <div class="body row">
           <div class="brand-body-top">
-            <a class="heading selected" href="/">Phi Kappa Tau</a>
-            <a href="https://www.facebook.com/RITPhiTau"><img src="http://www.nationalbeautyinstitute.com/images/facebook.png" style="width:60px;height:60px;"></a>
-            <a href="https://twitter.com/gnpkt"><img src="http://www.doctordigital.com.ar/main/images/twitter-logo-white.png" style="width:60px;height:60px;"></a>
+            <a class="heading selected" href="/" style="margin-right: 4px; margin-left: 25px; margin-top: 25px; margin-bottom: 10px">Phi Kappa Tau</a>
+            <br><br>
+            <a href="https://www.facebook.com/RITPhiTau" style="margin-left: 81px"><img src="http://www.nationalbeautyinstitute.com/images/facebook.png" style="width:60px;height:60px;"></a>
+            <a href="https://twitter.com/gnpkt" style="margin-left: 15px"><img src="http://www.doctordigital.com.ar/main/images/twitter-logo-white.png" style="width:60px;height:60px;"></a>
           </div>
         </div>
       </div>
@@ -16,25 +16,25 @@
       <ul class="footer-nav" role="navigation">
         <li>
           <ul>
-            <li><h2>How To Hear From Us</h2></li>
-            <li><%= link_to "Contact Us", root_path, class: "nav-item" %></li>
-            <li><%= link_to "Alumni News Letters", root_path, class: "nav-item" %></li>
+            <li><h2 style="color: #00A000">How To Hear From Us</h2></li>
+            <li><%= link_to "Contact Us", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Alumni News Letters", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
           <ul>
-            <li><h2>How To Give Back</h2></li>
-            <li><%= link_to "Volunteer Opportunities", root_path, class: "nav-item" %></li>
-            <li><%= link_to "Parents Fund", root_path, class: "nav-item" %></li>
+            <li><h2 style="color: #00A000">How To Give Back</h2></li>
+            <li><%= link_to "Volunteer Opportunities", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Parents Fund", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
           <ul>
-            <li><h2>Our Story</h2></li>
-            <li><%= link_to "Nation History", root_path, class: "nav-item" %></li>
-            <li><%= link_to "National Fast Facts", root_path, class: "nav-item" %></li>
-            <li><%= link_to "Local History", root_path, class: "nav-item" %></li>
-            <li><%= link_to "Local Fast Facts", root_path, class: "nav-item" %></li>
+            <li><h2 style="color: #00A000">Our Story</h2></li>
+            <li><%= link_to "Nation History", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "National Fast Facts", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Local History", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Local Fast Facts", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
       </ul>
