--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,10 @@
 <header role="banner">
   <div class="container" role="navigation">
-    <a href="#" class="nav-toggle">
-      <i class="ss-icon ss-standard"></i>
-    </a>
     <a class="brand selected" href="/">
       <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
       Phi Kappa Tau
+      <br>
+      <p style="font-size: 50%; color: #FFF">Learning Leading Serving</p>
     </a>
     <ul class="nav-links">
       <li><%= link_to "Home", root_path, class: "nav-item" %></li>
