static header and footer done

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,19 @@
 <header role="banner">
   <div class="container" role="navigation">
-    <a class="brand selected" href="/">
-      <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
-      Phi Kappa Tau
-      <br>
-      <p style="font-size: 50%; color: #FFF">Learning Leading Serving</p>
-    </a>
+    <div class="brand selected" style="width: 500px">
+      <a  style="color: #FFF;" href="/">
+        <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
+       Phi Kappa Tau
+      </a>
+      <p style="margin-top: -15px; font-size: 1.7rem; color: #FFF ">Learning Leading Serving</p>
+    </div>
     <ul class="nav-links">
       <li><%= link_to "Home", root_path, class: "nav-item" %></li>
-      <li><%= link_to "About", root_path, class: "nav-item" %></li>
-      <li><%= link_to "Information For Students", root_path, class: "nav-item" %></li>
-      <li><%= link_to "Information For Parents", root_path, class: "nav-item" %></li>
-      <li><%= link_to "FAQ", root_path, class: "nav-item" %></li>
-      <li><%= link_to "Contact Us", root_path, class: "nav-item" %></li>
+      <li><%= link_to "About", about_path, class: "nav-item" %></li>
+      <li><%= link_to "Students", information_for_students_path, class: "nav-item" %></li>
+      <li><%= link_to "Parents", information_for_parents_path, class: "nav-item" %></li>
+      <li><%= link_to "FAQ", faq_path, class: "nav-item" %></li>
+      <li><%= link_to "Contact", contact_us_path, class: "nav-item" %></li>
     </ul>
   </div>
 </header>
