--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
       <ul class="footer-nav" role="navigation">
         <li>
           <ul>
-            <li><h2 style="color: #00A000">How To Hear From Us</h2></li>
+            <li><h2 style="color: #00A000">Hear From Us</h2></li>
             <li><%= link_to "Contact Us", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
             <li><%= link_to "Alumni News Letters", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
