--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,12 @@
 <% if alert %>
     <p class="alert alert-danger"><%= alert %></p>
 <% end %>
-
-<%= yield %>
+<div class="container">
+  <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+  <% end %>
+  <%= yield %>
+</div>
 
 <%= render 'layouts/footer' %>
 
