--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,15 @@
-about
+Mission
+
+The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and exemplary character.
+
+Vision
+
+The vision of Phi Kappa Tau is to be recognized as a leadership organization that binds men together and challenges them to improve their campuses and the world.
+
+Creed
+
+Phi Kappa Tau, by admitting me to membership, has conferred upon me a mark of distinction in which I take just pride. I believe in the spirit of brotherhood for which it stands. I shall strive to attain its ideals, and by so doing to bring to it honor and credit. I shall be loyal to my college and my chapter and shall keep strong my ties to them that I may ever retain the spirit of youth. I shall be a good and loyal citizen. I shall try always to discharge the obligation to others which arises from the fact that I am a fraternity man.
+
+Roland Maxwell, Southern California 1922
+
+November 19, 1950
