--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,29 @@
 
 <table>
   <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
+  <tr>
+    <th>Title</th>
+    <th>Content</th>
+    <th>Published?</th>
+    <th>Author</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @posts.each do |post| %>
+  <% @posts.each do |post| %>
       <tr>
+        <td><%= post.title %></td>
+        <td><%= post.content %></td>
+        <td><%= post.published %></td>
+        <td><%= post.author %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
