added information from old website to the new website

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,14 +16,14 @@
       <ul class="footer-nav" role="navigation">
         <li>
           <ul>
-            <li><h2 style="color: #00A000">Hear From Us</h2></li>
+            <li><h2 style="color: #00A000">Reaching Out</h2></li>
             <li><%= link_to "Contact Us", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
             <li><%= link_to "Alumni News Letters", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
           <ul>
-            <li><h2 style="color: #00A000">How To Give Back</h2></li>
+            <li><h2 style="color: #00A000">Giving Back</h2></li>
             <li><%= link_to "Volunteer Opportunities", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
             <li><%= link_to "Parents Fund", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
