--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,24 +17,24 @@
         <li>
           <ul>
             <li><h2 style="color: #00A000">Reaching Out</h2></li>
-            <li><%= link_to "Contact Us", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "Alumni News Letters", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Contact Us", contact_us_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Alumni News Letters", "#", class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
           <ul>
             <li><h2 style="color: #00A000">Giving Back</h2></li>
-            <li><%= link_to "Volunteer Opportunities", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "Parents Fund", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Volunteer Opportunities", volunteer_opportunities_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Parents Fund", parents_fund_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
           <ul>
             <li><h2 style="color: #00A000">Our Story</h2></li>
-            <li><%= link_to "Nation History", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "National Fast Facts", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "Local History", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "Local Fast Facts", root_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Nation History", national_history_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "National Fast Facts", national_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Local History", local_history_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Local Fast Facts", local_fast_facts_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
       </ul>
