--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,22 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+
 
 <%= render 'layouts/header' %>
-
 <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
 <% end %>
+<body>
 <% if alert %>
     <p class="alert alert-danger"><%= alert %></p>
 <% end %>
-<div class="container">
+<div class="body-container">
   <% flash.each do |key, value| %>
       <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
   <%= yield %>
 </div>
-
-<%= render 'layouts/footer' %>
-
 </body>
+<%= render 'layouts/footer' %>
 </html>
