--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,16 @@
 <% @posts.each do |post| %>
+  <div id= "<%= post.id%>" >
     <div class="card">
       <h1 style="text-align:center; text-decoration: underline;"><%= post.title %></h1>
       <div style="float: left; width: 40%">
-        <img src="http://phikappatau.org/images/stories/Phi_Kappa_Tau.jpg" style="width: 100px; height: auto;">
+        <img src="http://www.4taus.com/phi_kappa_tau_1.jpg" style="width: auto; height: auto;">
       </div>
-      <div style="float: right; width: 60%">
-        <h3><%= post.content %></h3>
+      <div style="float: right; width: 60%; padding-left: 20px;">
+        <p><%= post.content %></p>
       </div>
       <div style="float: none; clear:both;"> </div>
     </div>
+  </div>
+  <br>
+  <br>
 <% end %>
