updated background color

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #F3C347;
+  background-color: #e8ad2e;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
