basic flipping motion for faq

--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,11 +1,128 @@
-Doesn't everyone in your chapter talk, dress and act the same?
-We pride ourselves on the fact that we are different. That is what holds us together. There is no single characteristic that makes us Phi Taus. You can't say "Phi Tau, they're all jocks" or "Phi Tau, they only care about school". We do a little bit of everything and do it well. We have Brothers from all over the nation and from all different majors, races, and creeds. We are all different and we like it that way.
+<head>
+  <script>
+      $(document.body).on('click', '.card', function () {
+          console.log("CLICK");
+          document.querySelector('#flip-toggle').classList.toggle('flip');
+      });
+  </script>
+</head>
 
-How does involvement in service projects, social programs and intramurals help an individual?
-The feelings that you experience when helping others are indescribable. Knowing that YOU made a difference is a feeling that cannot be achieved any other way. Still skeptical? Ask one of us when we are doing a community service event and come along with us. Or if you want something simpler, ask any one of us to see the Hole in the Wall DVD - watching that is the next best thing to experiencing it first hand. Intramural sports are available every quarter for people interested in athletics. Greek intramurals are a totally different experience because of the bond you have with your teammates and the friendly rivalries we have with other houses.
+<div class="panel">
+  <div class="front card">
+    </p>Doesn't everyone in your chapter talk, dress and act the same?</p>
+  </div>
+  <div class="back card">
+    <p>We pride ourselves on the fact that we are different. That is what holds us together. There is no single characteristic that makes us Phi Taus. You can't say "Phi Tau, they're all jocks" or "Phi Tau, they only care about school". We do a little bit of everything and do it well. We have Brothers from all over the nation and from all different majors, races, and creeds. We are all different and we like it that way.</p>
+  </div>
+</div>
 
-How does membership in Phi Kappa Tau prepare an individual to be successful later in life?
-The leadership experience you receive when in a fraternity is invaluable. Although we do know how to have fun, we also know how to get work done. Time management is crucial to your college career and Phi Kappa Tau can assist you in this. The ability to balance academics, social life, philanthropy, and sleep in order to get the most out of your college experience is the single greatest gift Phi Kappa Tau can give you. However, this is not the only way in which Phi Tau prepares its members. It is no coincidence that so many Phi Taus end up with rewarding jobs; the people you meet and the connections you form make it easier to find better co-ops while in school and better jobs after graduation. In addition, the social skills you develop provide you with the required skills for job interviews and meeting people.
+<div class="panel">
+  <div class="front card">
+    <p>How does involvement in service projects, social programs and intramurals help an individual?</p>
+  </div>
+  <div class="back card">
+    <p>The feelings that you experience when helping others are indescribable. Knowing that YOU made a difference is a feeling that cannot be achieved any other way. Still skeptical? Ask one of us when we are doing a community service event and come along with us. Or if you want something simpler, ask any one of us to see the Hole in the Wall DVD - watching that is the next best thing to experiencing it first hand. Intramural sports are available every quarter for people interested in athletics. Greek intramurals are a totally different experience because of the bond you have with your teammates and the friendly rivalries we have with other houses.</p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p>How does membership in Phi Kappa Tau prepare an individual to be successful later in life?</p>
+  </div>
+  <div class="back card">
+    <p>The leadership experience you receive when in a fraternity is invaluable. Although we do know how to have fun, we also know how to get work done. Time management is crucial to your college career and Phi Kappa Tau can assist you in this. The ability to balance academics, social life, philanthropy, and sleep in order to get the most out of your college experience is the single greatest gift Phi Kappa Tau can give you. However, this is not the only way in which Phi Tau prepares its members. It is no coincidence that so many Phi Taus end up with rewarding jobs; the people you meet and the connections you form make it easier to find better co-ops while in school and better jobs after graduation. In addition, the social skills you develop provide you with the required skills for job interviews and meeting people.</p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
+
+<div class="panel">
+  <div class="front card">
+    <p></p>
+  </div>
+  <div class="back card">
+    <p></p>
+  </div>
+</div>
 
 How does Phi Kappa Tau promote scholarship, and how will it help me when I go looking for a job?
 Academics come first in Phi Tau. We have members in just about every major at RIT. For example, if you are an Electrical Engineering major, we have older Electrical Engineering majors that can help you study. They have taken the classes you will take. They have had the professors you will have. They know about co-ops. They know about finals. They know the ins and outs to the 10-week quarter system.
