--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -7,138 +7,139 @@
   </script>
 </head>
 
-<div class="panel">
-  <div class="front card">
-    </p>Doesn't everyone in your chapter talk, dress and act the same?</p>
-  </div>
-  <div class="back card">
-    <p>We pride ourselves on the fact that we are different. That is what holds us together. There is no single characteristic that makes us Phi Taus. You can't say "Phi Tau, they're all jocks" or "Phi Tau, they only care about school". We do a little bit of everything and do it well. We have Brothers from all over the nation and from all different majors, races, and creeds. We are all different and we like it that way.</p>
-  </div>
-</div>
+<ul class="flipping-cards">
+  <li>
+    <input type="checkbox" id="item1">
+    <label for="item1">
+      <span class="wrapper">
+        <span class="front">Doesn't everyone in your chapter talk, dress and act the same?</span>
+        <span class="back">We pride ourselves on the fact that we are different. That is what holds us together.
+                           There is no single characteristic that makes us Phi Taus. You can't say "Phi Tau, they're
+                           all jocks" or "Phi Tau, they only care about school". We do a little bit of everything and
+                           do it well. We have Brothers from all over the nation and from all different majors, races,
+                           and creeds. We are all different and we like it that way.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item2">
+    <label for="item2">
+        <span class="wrapper">
+          <span class="front">How does involvement in service projects, social programs and intramurals help an individual?</span>
+          <span class="back">The feelings that you experience when helping others are indescribable. Knowing that
+                             YOU made a difference is a feeling that cannot be achieved any other way. Still skeptical?
+                             Ask one of us when we are doing a community service event and come along with us. Or if you
+                             want something simpler, ask any one of us to see the Hole in the Wall DVD - watching that
+                             is the next best thing to experiencing it first hand. Intramural sports are available every
+                             quarter for people interested in athletics. Greek intramurals are a totally different
+                             experience because of the bond you have with your teammates and the friendly rivalries we
+                             have with other houses.</span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item3">
+    <label for="item3">
+      <span class="wrapper">
+        <span class="front">How does membership in Phi Kappa Tau prepare an individual to be successful later in life?</span>
+        <span class="back">The leadership experience you receive when in a fraternity is invaluable. Although we do know
+                           how to have fun, we also know how to get work done. Time management is crucial to your
+                           college career and Phi Kappa Tau can assist you in this. The ability to balance academics,
+                           social life, philanthropy, and sleep in order to get the most out of your college experience
+                           is the single greatest gift Phi Kappa Tau can give you. However, this is not the only way in
+                           which Phi Tau prepares its members. It is no coincidence that so many Phi Taus end up with
+                           rewarding jobs; the people you meet and the connections you form make it easier to find
+                           better co-ops while in school and better jobs after graduation. In addition, the social
+                           skills you develop provide you with the required skills for job interviews and meeting
+                           people.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item4">
+    <label for="item4">
+      <span class="wrapper">
+        <span class="front">How does Phi Kappa Tau promote scholarship, and how will it help me when I go looking for a job?</span>
+        <span class="back">Academics come first in Phi Tau. We have members in just about every major at RIT. For example, if you are an Electrical Engineering major, we have older Electrical Engineering majors that can help you study. They have taken the classes you will take. They have had the professors you will have. They know about co-ops. They know about finals. They know the ins and outs to the 10-week quarter system.
+                           We teach each other here and that is priceless. When you apply for a job, being a Phi Tau can work to your advantage. Your social experience has prepared you for your job interview. Your GPA and other academic achievements will be excellent because of our focus on scholarship. You will have been involved in philanthropy and community service, which is a crucial part of job placement. We have Phi Taus involved at RIT that can provide excellent letters of recommendation. And finally, we know lots of people all over the nation - Phi Taus like to hire other Phi Taus!</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item5">
+    <label for="item5">
+        <span class="wrapper">
+          <span class="front">How does Phi Kappa Tau rank compared to other Fraternities?</span>
+          <span class="back">Ranking Phi Kappa Tau, or any fraternity for that matter, depends on any number of
+                             variables. Typically, the question begs to the issue of how many chapters the organization
+                             has and/or how many alumni are on the record books with good addresses. There are presently
+                             66 men's social fraternities that are members of the North-American Inter fraternity
+                             Conference. In terms of numbers of active chapters and total living alumni, Phi Kappa Tau
+                             ranks in the top 25 of the NIC member groups.</span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item6">
+    <label for="item6">
+      <span class="wrapper">
+        <span class="front">How many scholarships does the Phi Kappa Tau Foundation provide?</span>
+        <span class="back">Currently, the Foundation provides the following scholarship for academic work:
 
-<div class="panel">
-  <div class="front card">
-    <p>How does involvement in service projects, social programs and intramurals help an individual?</p>
-  </div>
-  <div class="back card">
-    <p>The feelings that you experience when helping others are indescribable. Knowing that YOU made a difference is a feeling that cannot be achieved any other way. Still skeptical? Ask one of us when we are doing a community service event and come along with us. Or if you want something simpler, ask any one of us to see the Hole in the Wall DVD - watching that is the next best thing to experiencing it first hand. Intramural sports are available every quarter for people interested in athletics. Greek intramurals are a totally different experience because of the bond you have with your teammates and the friendly rivalries we have with other houses.</p>
-  </div>
-</div>
+                           6 Paul A. Elfers Omega Scholarships for $2,250 each
+                           9 Named Scholarships for $1,250 each
+                           2 Parents Fund Scholarships for $1,000 each
+                           3 Inter fraternity Educational Fellowships for $2,000 each
 
-<div class="panel">
-  <div class="front card">
-    <p>How does membership in Phi Kappa Tau prepare an individual to be successful later in life?</p>
-  </div>
-  <div class="back card">
-    <p>The leadership experience you receive when in a fraternity is invaluable. Although we do know how to have fun, we also know how to get work done. Time management is crucial to your college career and Phi Kappa Tau can assist you in this. The ability to balance academics, social life, philanthropy, and sleep in order to get the most out of your college experience is the single greatest gift Phi Kappa Tau can give you. However, this is not the only way in which Phi Tau prepares its members. It is no coincidence that so many Phi Taus end up with rewarding jobs; the people you meet and the connections you form make it easier to find better co-ops while in school and better jobs after graduation. In addition, the social skills you develop provide you with the required skills for job interviews and meeting people.</p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="front card">
-    <p></p>
-  </div>
-  <div class="back card">
-    <p></p>
-  </div>
-</div>
-
-How does Phi Kappa Tau promote scholarship, and how will it help me when I go looking for a job?
-Academics come first in Phi Tau. We have members in just about every major at RIT. For example, if you are an Electrical Engineering major, we have older Electrical Engineering majors that can help you study. They have taken the classes you will take. They have had the professors you will have. They know about co-ops. They know about finals. They know the ins and outs to the 10-week quarter system.
-We teach each other here and that is priceless. When you apply for a job, being a Phi Tau can work to your advantage. Your social experience has prepared you for your job interview. Your GPA and other academic achievements will be excellent because of our focus on scholarship. You will have been involved in philanthropy and community service, which is a crucial part of job placement. We have Phi Taus involved at RIT that can provide excellent letters of recommendation. And finally, we know lots of people all over the nation - Phi Taus like to hire other Phi Taus!
-
-How does Phi Kappa Tau rank compared to other Fraternities?
-Ranking Phi Kappa Tau, or any fraternity for that matter, depends on any number of variables. Typically, the question begs to the issue of how many chapters the organization has and/or how many alumni are on the record books with good addresses. There are presently 66 men's social fraternities that are members of the North-American Inter fraternity Conference. In terms of numbers of active chapters and total living alumni, Phi Kappa Tau ranks in the top 25 of the NIC member groups.
-
-How many scholarships does the Phi Kappa Tau Foundation provide?
-Currently, the Foundation provides the following scholarship for academic work:
-
-6 Paul A. Elfers Omega Scholarships for $2,250 each
-9 Named Scholarships for $1,250 each
-2 Parents Fund Scholarships for $1,000 each
-3 Inter fraternity Educational Fellowships for $2,000 each
-As the cost of education rises, more scholarships and scholarships in larger amounts will be critical in helping students meet their educational expenses. Scholarships are made available to both graduate and undergraduate students.
+                           As the cost of education rises, more scholarships and scholarships in larger amounts will be
+                           critical in helping students meet their educational expenses. Scholarships are made available
+                           to both graduate and undergraduate students.
+</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item7">
+    <label for="item7">
+      <span class="wrapper">
+        <span class="front">How would you describe the other fraternities here on campus?</span>
+        <span class="back">We respect every other house on campus. The best way to explain it is that if you value
+                           academics, athletics, leadership, philanthropy, community service, and social life, you
+                           should be Greek. What house you belong in is a different story. Every house has a different
+                           personality. We all share the same goals and visions - we just have different personalities.
+                           If you think you fit in at our house then you may be Phi Tau material and we would love to
+                           have you here, but there is no way to know until you check out the other houses.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item8">
+    <label for="item8">
+        <span class="wrapper">
+          <span class="front"></span>
+          <span class="back"></span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item9">
+    <label for="item9">
+      <span class="wrapper">
+        <span class="front"></span>
+        <span class="back"></span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item10">
+    <label for="item10">
+      <span class="wrapper">
+        <span class="front"></span>
+        <span class="back"></span>
+      </span>
+    </label>
+  </li>
+</ul>
 
 How would you describe the other fraternities here on campus?
 We respect every other house on campus. The best way to explain it is that if you value academics, athletics, leadership, philanthropy, community service, and social life, you should be Greek. What house you belong in is a different story. Every house has a different personality. We all share the same goals and visions - we just have different personalities. If you think you fit in at our house then you may be Phi Tau material and we would love to have you here, but there is no way to know until you check out the other houses.
