--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,13 @@
   </div>
 
   <div class="field">
+     <%= f.file_field :image %>
+  </div>
+  <div class="field">
+    <%= f.label :remote_image_url, "or image URL" %><br />
+    <%= f.text_field :remote_image_url %>
+  </div>
+  <div class="field">
     <%= f.label :published %><br>
     <%= f.check_box :published %>
   </div>
