--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
-<% @posts.each do |post| %>
+<% @posts.reverse_each do |post| %>
   <div id= "<%= post.id%>" >
     <div class="card">
       <h1 style="text-align:center; text-decoration: underline;"><%= post.title %></h1>
       <div style="float: left; width: 40%">
-        <img src="http://www.4taus.com/phi_kappa_tau_1.jpg" style="width: auto; height: auto;">
+        <%= image_tag post.image_url(:thumb) if post.image? %>
       </div>
       <div style="float: right; width: 60%; padding-left: 20px;">
         <p><%= post.content %></p>
