--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -6,7 +6,7 @@
       });
   </script>
 </head>
-
+<body>
 <ul class="flipping-cards">
   <li>
     <input type="checkbox" id="item1">
@@ -116,8 +116,12 @@
     <input type="checkbox" id="item8">
     <label for="item8">
         <span class="wrapper">
-          <span class="front"></span>
-          <span class="back"></span>
+          <span class="front">Isn't paying dues like paying for your friends?</span>
+          <span class="back">Absolutely not. This could not be any less true. The $30 a week that we pay funds our
+                             events and our college experience. If you didn't join a fraternity, wouldn't you spend $30
+                             or more on a weekend anyway? But even if you wanted to think of it like that we have about
+                             80,000 living alumni so with some quick math that comes out to about $0.01 per friend per
+                             year. Pretty cheap if you ask us!</span>
         </span>
     </label>
   </li>
@@ -125,8 +129,14 @@
     <input type="checkbox" id="item9">
     <label for="item9">
       <span class="wrapper">
-        <span class="front"></span>
-        <span class="back"></span>
+        <span class="front">Isn't that a lot of money for dues?</span>
+        <span class="back">Dues are $450 a semester. At first glance, that may seem like a lot, but when we break it
+                           down, you can see where the money is going. Some of the money goes into insurance provided by
+                           our National Organization. If anything happens to any of us while with the fraternity, we are
+                           covered. Some of the money funds our events. When we have dinners every other week or social
+                           events with sororities, we don't charge for attendance. You can think of it as prepaying for
+                           your weekend activities. The rest of the money goes towards items that are beneficial for the
+                           entire house, such as furniture, TVs, paper towels, and Brotherhood dinners.</span>
       </span>
     </label>
   </li>
@@ -134,24 +144,140 @@
     <input type="checkbox" id="item10">
     <label for="item10">
       <span class="wrapper">
-        <span class="front"></span>
-        <span class="back"></span>
+        <span class="front">What are the advantages of fraternity membership?</span>
+        <span class="back">In a nutshell, Phi Tau helps with time management, scholarship, athletics, philanthropy,
+                           community service, social experience, job placement, and friendly connections. You become a
+                           member of a 80,000 man organization nation-wide, and a 500+ man organization here at RIT.
+</span>
       </span>
     </label>
   </li>
-</ul>
-
-How would you describe the other fraternities here on campus?
-We respect every other house on campus. The best way to explain it is that if you value academics, athletics, leadership, philanthropy, community service, and social life, you should be Greek. What house you belong in is a different story. Every house has a different personality. We all share the same goals and visions - we just have different personalities. If you think you fit in at our house then you may be Phi Tau material and we would love to have you here, but there is no way to know until you check out the other houses.
-
-Isn't paying dues like paying for your friends?
-Absolutely not. This could not be any less true. The $30 a week that we pay funds our events and our college experience. If you didn't join a fraternity, wouldn't you spend $30 or more on a weekend anyway? But even if you wanted to think of it like that we have about 80,000 living alumni so with some quick math that comes out to about $0.01 per friend per year. Pretty cheap if you ask us!
-
-Isn't that a lot of money for dues?
-Dues are $450 a semester. At first glance, that may seem like a lot, but when we break it down, you can see where the money is going. Some of the money goes into insurance provided by our National Organization. If anything happens to any of us while with the fraternity, we are covered. Some of the money funds our events. When we have dinners every other week or social events with sororities, we don't charge for attendance. You can think of it as prepaying for your weekend activities. The rest of the money goes towards items that are beneficial for the entire house, such as furniture, TVs, paper towels, and Brotherhood dinners.
-
-What are some general facts about members of Greek letter organizations?
-Fraternity and Sorority Alumni are much more likely than nonmembers to participate in community service activities after graduation
+  <li>
+    <input type="checkbox" id="item11">
+    <label for="item11">
+      <span class="wrapper">
+        <span class="front">What is meant by "Building Men of Character" or "Honor and Credit"?</span>
+        <span class="back">Phi Kappa Tau is a values-based organization. We strive to make the most out of our members
+                           through the experiences we live. There is a strong focus on character and developing that
+                           character during your experience with Phi Kappa Tau. Do you know the six pillars of
+                           character? If you answered no, then Phi Tau may be a good place for you. We pride ourselves
+                           on a hazing-free new member program. Instead of humiliating our new members, we teach them
+                           character. We are building men of character. We strive to bring honor and credit to our
+                           organization through the lives we lead.
+</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item12">
+    <label for="item12">
+      <span class="wrapper">
+        <span class="front">What is Phi Kappa Tau doing about alcohol and substance abuse?</span>
+        <span class="back">By focusing its efforts on character building, Phi Kappa Tau hopes to equip brothers to make
+                           healthy and intelligent choices for themselves and others. Phi Tau is addressing alcohol
+                           abuse at the core of the issue by providing its men with the skills and knowledge needed to
+                           make responsible decisions. When brothers make unwise choices, Phi Tau holds them accountable
+                           at the chapter and national level.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item13">
+    <label for="item13">
+      <span class="wrapper">
+        <span class="front">What is Phi Kappa Tau doing about hazing?</span>
+        <span class="back">Phi Kappa Tau seeks to build character in its brothers. Hazing has no place in the
+                           character-building process and will not be tolerated by the Fraternity. Chapters and brothers
+                           who haze will be held accountable for their actions at every level. Because Phi Tau seeks to
+                           guide brothers in the wise decision-making process and openly discusses hazing and its
+                           dangerous and harmful effects during all educational programs. The new member education
+                           program, entitled Mark of Distinction uses the Creed as a Foundation for building better
+                           men.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item14">
+    <label for="item14">
+      <span class="wrapper">
+        <span class="front">What is the difference between this fraternity and a drinking club?</span>
+        <span class="back">Drinking clubs focus on drinking. We don't. Yes, we drink. Yes, we know how to have fun.
+                           But our primary focus is being the best group of guys we can be. We focus on academics,
+                           athletics, philanthropy, community service, and social life all at the same time. The reason
+                           we are here is because we care about more than drinking. We care about improving ourselves
+                           and those around us.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item15">
+    <label for="item15">
+      <span class="wrapper">
+        <span class="front">What would be expected of me in terms of finances, time and personal obligations?</span>
+        <span class="back">Dues are $200 a quarter or $20 a week. The minimum amount of time required is about an hour
+                           or two a week for meetings and a few hours a quarter for community service. The maximum
+                           amount of time you can put in is about 24 hours a day, 7 days a week. You can put in as much
+                           time as you desire. We understand that academics and family come first. If you have class or
+                           a personal obligation, you are not required to attend events. We only ask that you let us
+                           know so if we need to, we can get a hold of you.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item16">
+    <label for="item16">
+      <span class="wrapper">
+        <span class="front">What sets Phi Tau apart from other fraternities?</span>
+        <span class="back">Three areas set Phi Kappa Tau apart from other social organizations:
+                           Support - Through the volunteer and staff structure Phi Tau provides more frequent, more
+                                effective and better quality support than anyone. Chapters have the resources to be
+                                successful.
+                           Programming - The Foundation enables Phi Tau to provide better educational programming and
+                                more educational dollars per member than any other men's Fraternity.
+                           Philanthropic efforts - The opportunities available through Phi Tau's involvement with the
+                                Hole in the Wall Gang Camps are second to none. The hands-on interaction with these
+                                chronically ill children provides a powerful service-learning environment that builds
+                                better men.</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item17">
+    <label for="item17">
+      <span class="wrapper">
+        <span class="front">What are the purposes and objectives of Phi Kappa Tau?</span>
+        <span class="back">Purposes
+                                To instill the fundamentals of wholesome living and vigorous thinking
+                                To provide energetic participation in all collegiate activities: scholastic, social,
+                                    athletic, and forensic.
+                                To provide opportunities for close association with individuals of diverse backgrounds
+                                    and personalities thus advancing human relation skills.
+                                To offer undergraduate members experiences in management of their living environment as
+                                    valuable preparation for post fraternal life
+                                To bind chapters into a National Fraternity so that a synergistic integration is formed
+                                To be supportive of and cooperative with the goals of the educational institutions where
+                                    chapters of Phi Kappa Tau are located
+                           Objectives
+                                To develop and maintain membership programs which compliment the mission of universities
+                                    and colleges where chapters are located
+                                To assist new students in their orientation to the demands of higher education
+                                To furnish a living and learning experience in a democratic setting
+                                To expose members to the importance of social awareness and to assist them in learning
+                                    proper conduct in everyday situations
+                                To provide an opportunity for men to live, work and think with other men toward
+                                    worthwhile pursuits
+                                To keep open the lines of communication between undergraduates and alumni members
+                                To encourage the "total man" concept, encompassing spiritual, mental and physical
+                                    well-being through Fellowship</span>
+      </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item18">
+    <label for="item18">
+      <span class="wrapper">
+        <span class="front">What are some general facts about members of Greek letter organizations?</span>
+        <span class="back">Fraternity and Sorority Alumni are much more likely than nonmembers to participate in community service activities after graduation
 Forty-three of the 100 members of the U.S. Senate are members of a fraternity or sorority
 29% of the U.S. House of Representatives are Greek affiliated
 Of North America's 50 largest corporations, 43 are headed by Greek men and women
@@ -172,43 +298,10 @@ Greek alumni are more satisfied with the social and cultural aspects of the coll
 Greek affiliation has a significant impact on the current income of alumni
 Employers consider 18 key factors in evaluating job interviews...the Greek community provides opportunity to develop 12 of those key factors: Real-World Experience, Leadership Qualities, Personal Presentation, Attitude, Communication Skills, Problem Solving, Community Service Orientation, Adaptability-Drive-Initiative, Proven Track Record, Ability to Learn, Preparation for Interviews
 
-What are the advantages of fraternity membership?
-In a nutshell, Phi Tau helps with time management, scholarship, athletics, philanthropy, community service, social experience, job placement, and friendly connections. You become a member of a 80,000 man organization nation-wide, and a 500+ man organization here at RIT.
-
-What are the purposes and objectives of Phi Kappa Tau?
-Purposes
-To instill the fundamentals of wholesome living and vigorous thinking
-To provide energetic participation in all collegiate activities: scholastic, social, athletic, and forensic.
-To provide opportunities for close association with individuals of diverse backgrounds and personalities thus advancing human relation skills.
-To offer undergraduate members experiences in management of their living environment as valuable preparation for post fraternal life
-To bind chapters into a National Fraternity so that a synergistic integration is formed
-To be supportive of and cooperative with the goals of the educational institutions where chapters of Phi Kappa Tau are located
-Objectives
-To develop and maintain membership programs which compliment the mission of universities and colleges where chapters are located
-To assist new students in their orientation to the demands of higher education
-To furnish a living and learning experience in a democratic setting
-To expose members to the importance of social awareness and to assist them in learning proper conduct in everyday situations
-To provide an opportunity for men to live, work and think with other men toward worthwhile pursuits
-To keep open the lines of communication between undergraduates and alumni members
-To encourage the "total man" concept, encompassing spiritual, mental and physical well-being through Fellowship
-
-What is meant by "Building Men of Character" or "Honor and Credit"?
-Phi Kappa Tau is a values-based organization. We strive to make the most out of our members through the experiences we live. There is a strong focus on character and developing that character during your experience with Phi Kappa Tau. Do you know the six pillars of character? If you answered no, then Phi Tau may be a good place for you. We pride ourselves on a hazing-free new member program. Instead of humiliating our new members, we teach them character. We are building men of character. We strive to bring honor and credit to our organization through the lives we lead.
-
-What is Phi Kappa Tau doing about alcohol and substance abuse?
-By focusing its efforts on character building, Phi Kappa Tau hopes to equip brothers to make healthy and intelligent choices for themselves and others. Phi Tau is addressing alcohol abuse at the core of the issue by providing its men with the skills and knowledge needed to make responsible decisions. When brothers make unwise choices, Phi Tau holds them accountable at the chapter and national level.
-
-What is Phi Kappa Tau doing about hazing?
-Phi Kappa Tau seeks to build character in its brothers. Hazing has no place in the character-building process and will not be tolerated by the Fraternity. Chapters and brothers who haze will be held accountable for their actions at every level. Because Phi Tau seeks to guide brothers in the wise decision-making process and openly discusses hazing and its dangerous and harmful effects during all educational programs. The new member education program, entitled Mark of Distinction uses the Creed as a Foundation for building better men.
-
-What is the difference between this fraternity and a drinking club?
-Drinking clubs focus on drinking. We don't. Yes, we drink. Yes, we know how to have fun. But our primary focus is being the best group of guys we can be. We focus on academics, athletics, philanthropy, community service, and social life all at the same time. The reason we are here is because we care about more than drinking. We care about improving ourselves and those around us.
-
-What sets Phi Tau apart from other fraternities?
-Three areas set Phi Kappa Tau apart from other social organizations:
-Support - Through the volunteer and staff structure Phi Tau provides more frequent, more effective and better quality support than anyone. Chapters have the resources to be successful.
-Programming - The Foundation enables Phi Tau to provide better educational programming and more educational dollars per member than any other men's Fraternity.
-Philanthropic efforts - The opportunities available through Phi Tau's involvement with the Hole in the Wall Gang Camps are second to none. The hands-on interaction with these chronically ill children provides a powerful service-learning environment that builds better men.
-
-What would be expected of me in terms of finances, time and personal obligations?
-Dues are $200 a quarter or $20 a week. The minimum amount of time required is about an hour or two a week for meetings and a few hours a quarter for community service. The maximum amount of time you can put in is about 24 hours a day, 7 days a week. You can put in as much time as you desire. We understand that academics and family come first. If you have class or a personal obligation, you are not required to attend events. We only ask that you let us know so if we need to, we can get a hold of you.
+</span>
+      </span>
+    </label>
+  </li>
+</ul>
+<div style="float: none; clear:both;"> </div>
+</body>
