changed to twitter style posts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1118,6 +1118,11 @@ article, aside, figure, figure img, footer, header, nav, section, .open > .dropd
   padding: 3rem 5rem;
 }
 
+hr {
+  display: block; height: 1px;
+  border: 0; border-top: 1px solid #000000;
+  margin: 1em 0; padding: 0;
+}
 
 
 
